--- a/src/main/resources/Locale_en.yml
+++ b/src/main/resources/Locale_en.yml
@@ -1,8 +1,253 @@
-#log when plugin is loaded
 load_plugin: |
   
-  §a==============================
-  §bAwesomeMarket 插件已启用!
-  §e欢迎使用 WJZ_P 的插件(✧ω✧)!
-  §e任何问题请联系 QQ1369727119
-  §a==============================
+  §3▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰
+  §b    ___ §3                                         §b__  ___§3           __        §b__ 
+  §b   /   |§3_      _____  _________  ____ ___  ___  §b/  |/  /§3___ ______/ /_____  §b/ /_
+  §b  / /| |§3 | /| / / _ \/ ___/ __ \/ __ `__ \/ _ \§b/ /|_/ /§3 __ `/ ___/ //_/ _ \§b/ __/
+  §b / ___ |§3 |/ |/ /  __(__  ) /_/ / / / / / /  __§b/ /  / /§3 /_/ / /  / ,< /  __§b/ /_  
+  §b/_/  |_|§3__/|__/\___/____/\____/_/ /_/ /_/\___§b/_/  /_/§3\__,_/_/  /_/|_|\___/§b\__/  
+  
+  §3▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰
+  §aAwesomeMarket 插件已启动!!
+  §e感谢使用(｡•̀ᴗ-)✧!
+  §c任何bug请联系QQ：1369727119
+  §aGithub地址：https://github.com/WJZ-P/Awesome-Market
+
+unload_plugin: |
+  
+  §c==============================
+  §bAwesomeMarket 插件已关闭!
+  §e感谢使用(｡•̀ᴗ-)✧!
+  §c==============================
+
+try_create_database: "§7[§b全球市场§7] §e数据库不存在，创建awesome_market数据库。"
+connect_mysql_success: "§7[§b全球市场§7] §e成功连接数据库！"
+connect_mysql_fail: "§7[§b全球市场§7] §e数据库连接出错！"
+create_mysql_fail: "§7[§b全球市场§7] §e创建数据库或表出错！"
+no_vault: "§7[§b全球市场§7] §cVault插件未安装或未启用！"
+no_player_points: "§7[§b全球市场§7] §cPlayerPoints插件未安装或未启用！"
+payment_type_error: "§7[§b全球市场§7] §c货币类型错误！"
+price_error: "§7[§b全球市场§7] §c请输入正确的价格！"
+pay_tax_fail: "§7[§b全球市场§7] §c您的货币余额§e %.2f§c 不足以付税§e%.2f§c！上架失败！"
+withdraw_tax: "§7[§b全球市场§7] §e物品上架成功！扣除税款§c %.2f §a%s"
+args_error_sell: "§7[§b全球市场§7] §c参数错误，正确格式为:\n§e/amt sell money(point) price"
+empty_item_error_sell: "§7[§b全球市场§7] §e请把要上架的商品置于主手中！"
+
+buy_success: §7[§b全球市场§7] §a您花费§e %money%§6 %currency% §a购买了§e%seller%§a的§7[§r%item%§7] §a!
+add_item_to_storage: §7[§b全球市场§7] §c背包空间不足! 物品已移至暂存库!
+get_storage_item_fail: §7[§b全球市场§7] §c背包空间不足! 请先清理出足够的背包!
+take_item_from_storage: §7[§b全球市场§7] §a物品已成功入库!
+
+buy_fail:
+  lack-of-eco: §7[§b全球市场§7] §c余额不足! 您仍需§e %money% §6 %currency% §c以购买!
+  has-been-bought: §7[§b全球市场§7] §c购买失败! 手慢了! 物品已被买走...
+
+sort:
+  time_desc: §6最新商品
+  time_asc: §6最旧商品
+  price_desc: §6高价优先
+  price_asc: §6低价优先
+
+market-GUI:
+  title: §e§l全球市场 %seller%
+  seller: §7- §c%player2%
+  prev-page: §e上一页
+  prev-page-lore: §e%d / %d 页
+
+  next-page: §e下一页
+  next-page-lore: §e%d / %d 页
+
+  sort-type: §c商品排序
+  sort-type-lore:
+    - §e当前：§6%sort%
+    - ""
+    - §a§l点击切换
+
+  currency-type: §b货币类型
+  currency-type-lore:
+    - §e当前：§6%currency%
+    - ""
+    - §a§l点击切换
+
+  storage: §9暂存库
+  storage-lore: §5背包已满时购得物品会存于此处
+
+  help-book: §3帮助
+  help-book-lore:
+    - §a§l /amt sell 货币类型 价格 §r§a- 上架主手物品
+    - §a§l /amt view 玩家名 §r§a- 查看玩家商店
+    - §a§l /amt find §r§a- 在商店查找主手物品
+    - ""
+    - §6§l 点击恢复默认排序
+
+  commodity:
+    lore:
+      - §8==========§7§l[§a§l 市场商品 §7§l]§8==========
+      - ""
+      - §7»§6 🪙 §3 物品价格：§e%price% §6%currency%
+      - §7»§e 🧑 §3 出售玩家：§a%player%
+      - §7»§b 📅 §3 上架时间：§d%on_sell_time%
+      - ""
+      - "§7§l▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▪▫▪▫▪▫▪▫▪▪▫▪▫▪"
+      - ""
+      - §7»§b 🔍 §c鼠标右键 §a- 仅查看该种商品
+      - §7»§b 🔍 §cshift+右键 §a- 查看玩家商店
+      - ""
+      - "%operation%"
+      - ""
+      - §8==============================
+
+    buy: §7»§2 ✅ §a§l点击购买
+    unlisted: §7»§4 ❌ §c§lshift+左键下架商品
+
+
+
+  statistic: §3统计数据§7 - §6%player%
+  statistic-loading: §c正在加载...
+  statistic-lore:
+    - §8»»————————————««
+    - §a📦 商品交易  §8»»
+    - "  §7»§b  🛒 §a购买: §c%buy_count% §6件"
+    - "  §7»§6  🛍 §a出售: §c%sell_count% §6件"
+    - ""
+    - §e💰 花费统计  §8»»
+    - "  §7»§a  💸 §e支出: §c%money% §6%currency_money%"
+    - "  §7»§a  💸 §e支出: §c%point% §6%currency_point%"
+    - ""
+    - §b⭐ 收入统计  §8»»
+    - "  §7»§e  🌟 §b收入: §c%money_get% §6%currency_money%"
+    - "  §7»§e  🌟 §b收入: §c%point_get% §6%currency_point%"
+    - ""
+    - "%operation%"
+    - §8»»————————————««
+  statistic-look-up: §7»§b 🔍 §a§l点击查看交易记录
+  statistic-no-permission-look-up: §7»§4 ❌ §c§l你没有权限查看TA的交易记录!
+
+confirm-GUI:
+  buy:
+    title: §c§l确认支付?
+    confirm: §a点击以确认支付!
+    confirm-lore: §e你将支付 §c%price% §6%currency% §e给 §a%player%
+    cancel: §c点击以取消支付!
+    cancel-lore: §d我再想想...
+
+storage-GUI:
+  title: §9§l暂存库 §7- §8%player%
+  prev-page: §e上一页
+  prev-page-lore: §e%d / %d 页
+
+  next-page: §e下一页
+  next-page-lore: §e%d / %d 页
+  market: §e点击返回全球市场
+
+  item:
+    - §8==========§7§l[§a§l 待取商品 §7§l]§8==========
+    - ""
+    - §7»§b 📅 §3购得时间：§d%buy_time%
+    - §7»§6 💰 §3物品价格：§e%price% §6%currency%
+    - §7»§e 🧑 §3出售玩家：§a%player%
+    - ""
+    - §7»§2 📦 §a§l点击入库
+    - ""
+    - §8==============================
+
+  unlisted-item:
+    - §8==========§7§l[§c§l 下架物品 §7§l]§8==========
+    - §7»§b 📅 §3下架时间：§d%time%
+    - §7»§6 💰 §3出售价格：§e%price% §6%currency%
+    - ""
+    - §7» 👆 §a§l点击取回!
+    - ""
+    - §8==============================
+
+transaction-GUI:
+  title: §3§l交易记录 §7- §1%player% %another_player%
+  is-claimed: §b ✅ §a§l卖家已收款
+  not-claimed: §4 ❌ §c§l卖家未收款
+  another-player: §8§l❌ §c%player2%
+  transaction-item-lore:
+    - §8==========§7§l[§b§l 交易记录 §7§l]§8==========
+    - ""
+    - §7»§a 👤 §3出售玩家：§c%seller%
+    - §7»§9 🛍 §3购买玩家：§a%buyer%
+    - §7»§6 💰 §3交易价格：§e%price% §6%priceType%
+    - §7»§b 📅 §3交易时间：§d%trade_time%
+    - ""
+    - §7»§b 🔍 §a点击以查看与TA的交易
+    - ""
+    - §7» %isClaimed%
+    - ""
+    - §8==============================
+
+
+  market: §e点击返回全球市场
+  prev-page: §e上一页
+  prev-page-lore: §e%d / %d 页
+
+  next-page: §e下一页
+  next-page-lore: §e%d / %d 页
+
+  sort-type: §c记录排序
+  sort-type-lore:
+    - §e当前：§6%sort%
+    - ""
+    - §a§l点击切换
+
+  trade-type: §b交易类型
+  trade-type-lore:
+    - §e当前：§6%tradeType%
+    - ""
+    - §a§l点击切换
+
+  currency-type: §b货币类型
+  currency-type-lore:
+    - §e当前：§6%currency%
+    - ""
+    - §a§l点击切换
+
+  help-book: §3帮助
+  help-book-lore:
+    - §a§l 这里还没有什么东西哦!
+    - ""
+    - §6§l 点击恢复默认排序
+
+tip:
+  item-is-sold: §7[§b全球市场§7] §a您的物品§7[%item%§7]§a已被§6%buyer%§a购买!
+  receive-money: §7[§b全球市场§7] §a您获得了§e %money%§6 %currency% §a作为§7[§r%item%§7]§a的售出收益!
+  can-not-buy-self: §7[§b全球市场§7] §c您不能购买自己的商品!
+  unlisted-fail: §7[§b全球市场§7] §c下架失败! 物品已经被买走啦!
+  unlisted-success: §7[§b全球市场§7] §a物品成功下架至背包!
+  unlisted-storage: §7[§b全球市场§7] §c背包空间不足! 下架物品已移至暂存库!
+  unlisted-storage-op: §7[§b全球市场§7] §b已强制把物品下架至玩家暂存库!
+  item-unlisted-by-op: §7[§b全球市场§7] §c你的一件被管理员强制下架至暂存库!
+
+command:
+  general:
+    error:
+      no-permission: §7[§b全球市场§7] §c你没有权限使用该指令!
+      lack-of-params: §7[§b全球市场§7] §c参数不足!
+      lack-of-name: §7[§b全球市场§7] §c请输入玩家名!
+      name-not-exist: §7[§b全球市场§7] §c玩家不存在!
+      not-player: §7[§b全球市场§7] §c该指令仅限玩家使用!
+    help:
+      view-market:
+        - "§7[§b全球市场§7] §c请输入需要查看的玩家名 示例:"
+        - "§7[§b全球市场§7] §a/amt view market  <玩家名>"
+      view-storage:
+        - "§7[§b全球市场§7] §c请输入需要查看的玩家名 示例:"
+        - "§7[§b全球市场§7] §a/amt view storage  <玩家名>"
+      view-transaction:
+        - "§7[§b全球市场§7] §c请输入需要查看的玩家名 示例:"
+        - "§7[§b全球市场§7] §a/amt view transaction  <玩家名>"
+        - "§7[§b全球市场§7] §c支持指定双玩家以查看交易记录 示例:"
+        - "§7[§b全球市场§7] §a/amt view transaction  <玩家1> <玩家2>"
+
+currency:
+  money: "游戏币"
+  point: "点券"
+  all: "所有"
+
+trade-type:
+  all: §a全部
+  buy: §6购买
+  sell: §c出售
