--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -1,11 +1,18 @@
 #插件加载时候的log
 load_plugin: |
   
-  §a==============================
-  §bAwesomeMarket 插件已启用!
-  §e欢迎使用 WJZ_P 的插件(✧ω✧)!
-  §e任何问题请联系 QQ1369727119
-  §a==============================
+  §3▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰
+  §b    ___ §3                                         §b__  ___§3           __        §b__ 
+  §b   /   |§3_      _____  _________  ____ ___  ___  §b/  |/  /§3___ ______/ /_____  §b/ /_
+  §b  / /| |§3 | /| / / _ \/ ___/ __ \/ __ `__ \/ _ \§b/ /|_/ /§3 __ `/ ___/ //_/ _ \§b/ __/
+  §b / ___ |§3 |/ |/ /  __(__  ) /_/ / / / / / /  __§b/ /  / /§3 /_/ / /  / ,< /  __§b/ /_  
+  §b/_/  |_|§3__/|__/\___/____/\____/_/ /_/ /_/\___§b/_/  /_/§3\__,_/_/  /_/|_|\___/§b\__/  
+  
+  §3▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰
+  §aAwesomeMarket 插件已启动!!
+  §e感谢使用(｡•̀ᴗ-)✧!
+  §c任何bug请联系QQ：1369727119
+  §aGithub地址：https://github.com/WJZ-P/Awesome-Market
 
 unload_plugin: |
   
@@ -225,16 +232,16 @@ command:
       not-player: §7[§b全球市场§7] §c该指令仅限玩家使用!
     help:
       view-market:
-       - "§7[§b全球市场§7] §c请输入需要查看的玩家名 示例:"
-       - "§7[§b全球市场§7] §a/amt view market  <玩家名>"
+        - "§7[§b全球市场§7] §c请输入需要查看的玩家名 示例:"
+        - "§7[§b全球市场§7] §a/amt view market  <玩家名>"
       view-storage:
-       - "§7[§b全球市场§7] §c请输入需要查看的玩家名 示例:"
-       - "§7[§b全球市场§7] §a/amt view storage  <玩家名>"
+        - "§7[§b全球市场§7] §c请输入需要查看的玩家名 示例:"
+        - "§7[§b全球市场§7] §a/amt view storage  <玩家名>"
       view-transaction:
-       - "§7[§b全球市场§7] §c请输入需要查看的玩家名 示例:"
-       - "§7[§b全球市场§7] §a/amt view transaction  <玩家名>"
-       - "§7[§b全球市场§7] §c支持指定双玩家以查看交易记录 示例:"
-       - "§7[§b全球市场§7] §a/amt view transaction  <玩家1> <玩家2>"
+        - "§7[§b全球市场§7] §c请输入需要查看的玩家名 示例:"
+        - "§7[§b全球市场§7] §a/amt view transaction  <玩家名>"
+        - "§7[§b全球市场§7] §c支持指定双玩家以查看交易记录 示例:"
+        - "§7[§b全球市场§7] §a/amt view transaction  <玩家1> <玩家2>"
 
 currency:
   money: "游戏币"
