--- a/src/main/resources/Locale_en.yml
+++ b/src/main/resources/Locale_en.yml
@@ -49,7 +49,7 @@ sort:
   price_desc: §6Price High to Low
   price_asc: §6Price Low to High
 
-market-GUI:
+market-gui:
   title: §e§lAwesome Market %seller%
   seller: §7- §c%player2%
   prev-page: §ePrev Page
@@ -122,7 +122,7 @@ market-GUI:
   statistic-look-up: §7»§b 🔍 §a§lClick to View Transaction Records
   statistic-no-permission-look-up: §7»§4 ❌ §c§lYou don't have permission to view THEIR transaction records!
 
-confirm-GUI:
+confirm-gui:
   buy:
     title: §c§lConfirm Payment?
     confirm: §aClick to Confirm Payment!
@@ -130,7 +130,7 @@ confirm-GUI:
     cancel: §cClick to Cancel Payment!
     cancel-lore: §dLet me reconsider...
 
-storage-GUI:
+storage-gui:
   title: §9§lStorage §7- §8%player%
   prev-page: §ePrev Page
   prev-page-lore: §ePage %d / %d
@@ -160,7 +160,7 @@ storage-GUI:
     - ""
     - §8==================================
 
-transaction-GUI:
+transaction-gui:
   title: §3Transaction §7- §1%player% %another_player%
   is-claimed: §b ✅ §a§lSeller Claimed Payment
   not-claimed: §4 ❌ §c§lSeller Has Not Claimed Payment
